src/platform/formula/runtime/ReportFormulaParser.js
// Generated from /Users/zhangye/Documents/code/code_yonyou/FormulaTextArea/src/platform/formula/grammar/ReportFormulaParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ReportFormulaParserListener = require('./ReportFormulaParserListener').ReportFormulaParserListener;
var ReportFormulaParserVisitor = require('./ReportFormulaParserVisitor').ReportFormulaParserVisitor;

var grammarFileName = "ReportFormulaParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "';'", "','", "'='", "'?'", "':'", "'$'", "'@'", 
                     "'.'", "'++'", "'--'", "'+'", "'-'", "'!'", "'*'", 
                     "'/'", "'%'", "'**'", "'#'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'&&'", "'||'", "'->'", "'if'", 
                     null, "'null'" ];

var symbolicNames = [ null, "MultiLineComment", "SingleLineComment", "OpenParen", 
                      "CloseParen", "OpenBracket", "CloseBracket", "OpenBrace", 
                      "CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", 
                      "Colon", "Dollar", "At", "Dot", "PlusPlus", "MinusMinus", 
                      "Plus", "Minus", "Not", "Multiply", "Divide", "Modulus", 
                      "Power", "Hashtag", "LessThan", "MoreThan", "LessThanEquals", 
                      "GreaterThanEquals", "Equals_", "NotEquals", "And", 
                      "Or", "ArrowRight", "If", "BooleanLiteral", "NullLiteral", 
                      "CellRangeLiteral", "CellFloatRangeLiteral", "CellAddressLiteral", 
                      "BasicNumberLiteral", "DecimalLiteral", "HexIntegerLiteral", 
                      "OctalIntegerLiteral", "OctalIntegerLiteral2", "BinaryIntegerLiteral", 
                      "BigHexIntegerLiteral", "BigOctalIntegerLiteral", 
                      "BigBinaryIntegerLiteral", "BigDecimalIntegerLiteral", 
                      "Identifier", "StringLiteral", "WhiteSpaces", "LineTerminator", 
                      "UnexpectedCharacter" ];

var ruleNames =  [ "formulaExpr", "expressionStatement", "expressionSequence", 
                   "singleExpression", "arguments", "argument", "objectLiteral", 
                   "arrayLiteral", "elementList", "arrayElement", "propertyAssignment", 
                   "propertyName", "identifierName", "identifier", "refItemCode", 
                   "literal", "numericLiteral", "percentageLiteral", "reservedWord", 
                   "keyword", "eos" ];

function ReportFormulaParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ReportFormulaParser.prototype = Object.create(antlr4.Parser.prototype);
ReportFormulaParser.prototype.constructor = ReportFormulaParser;

Object.defineProperty(ReportFormulaParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ReportFormulaParser.EOF = antlr4.Token.EOF;
ReportFormulaParser.MultiLineComment = 1;
ReportFormulaParser.SingleLineComment = 2;
ReportFormulaParser.OpenParen = 3;
ReportFormulaParser.CloseParen = 4;
ReportFormulaParser.OpenBracket = 5;
ReportFormulaParser.CloseBracket = 6;
ReportFormulaParser.OpenBrace = 7;
ReportFormulaParser.CloseBrace = 8;
ReportFormulaParser.SemiColon = 9;
ReportFormulaParser.Comma = 10;
ReportFormulaParser.Assign = 11;
ReportFormulaParser.QuestionMark = 12;
ReportFormulaParser.Colon = 13;
ReportFormulaParser.Dollar = 14;
ReportFormulaParser.At = 15;
ReportFormulaParser.Dot = 16;
ReportFormulaParser.PlusPlus = 17;
ReportFormulaParser.MinusMinus = 18;
ReportFormulaParser.Plus = 19;
ReportFormulaParser.Minus = 20;
ReportFormulaParser.Not = 21;
ReportFormulaParser.Multiply = 22;
ReportFormulaParser.Divide = 23;
ReportFormulaParser.Modulus = 24;
ReportFormulaParser.Power = 25;
ReportFormulaParser.Hashtag = 26;
ReportFormulaParser.LessThan = 27;
ReportFormulaParser.MoreThan = 28;
ReportFormulaParser.LessThanEquals = 29;
ReportFormulaParser.GreaterThanEquals = 30;
ReportFormulaParser.Equals_ = 31;
ReportFormulaParser.NotEquals = 32;
ReportFormulaParser.And = 33;
ReportFormulaParser.Or = 34;
ReportFormulaParser.ArrowRight = 35;
ReportFormulaParser.If = 36;
ReportFormulaParser.BooleanLiteral = 37;
ReportFormulaParser.NullLiteral = 38;
ReportFormulaParser.CellRangeLiteral = 39;
ReportFormulaParser.CellFloatRangeLiteral = 40;
ReportFormulaParser.CellAddressLiteral = 41;
ReportFormulaParser.BasicNumberLiteral = 42;
ReportFormulaParser.DecimalLiteral = 43;
ReportFormulaParser.HexIntegerLiteral = 44;
ReportFormulaParser.OctalIntegerLiteral = 45;
ReportFormulaParser.OctalIntegerLiteral2 = 46;
ReportFormulaParser.BinaryIntegerLiteral = 47;
ReportFormulaParser.BigHexIntegerLiteral = 48;
ReportFormulaParser.BigOctalIntegerLiteral = 49;
ReportFormulaParser.BigBinaryIntegerLiteral = 50;
ReportFormulaParser.BigDecimalIntegerLiteral = 51;
ReportFormulaParser.Identifier = 52;
ReportFormulaParser.StringLiteral = 53;
ReportFormulaParser.WhiteSpaces = 54;
ReportFormulaParser.LineTerminator = 55;
ReportFormulaParser.UnexpectedCharacter = 56;

ReportFormulaParser.RULE_formulaExpr = 0;
ReportFormulaParser.RULE_expressionStatement = 1;
ReportFormulaParser.RULE_expressionSequence = 2;
ReportFormulaParser.RULE_singleExpression = 3;
ReportFormulaParser.RULE_arguments = 4;
ReportFormulaParser.RULE_argument = 5;
ReportFormulaParser.RULE_objectLiteral = 6;
ReportFormulaParser.RULE_arrayLiteral = 7;
ReportFormulaParser.RULE_elementList = 8;
ReportFormulaParser.RULE_arrayElement = 9;
ReportFormulaParser.RULE_propertyAssignment = 10;
ReportFormulaParser.RULE_propertyName = 11;
ReportFormulaParser.RULE_identifierName = 12;
ReportFormulaParser.RULE_identifier = 13;
ReportFormulaParser.RULE_refItemCode = 14;
ReportFormulaParser.RULE_literal = 15;
ReportFormulaParser.RULE_numericLiteral = 16;
ReportFormulaParser.RULE_percentageLiteral = 17;
ReportFormulaParser.RULE_reservedWord = 18;
ReportFormulaParser.RULE_keyword = 19;
ReportFormulaParser.RULE_eos = 20;


function FormulaExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReportFormulaParser.RULE_formulaExpr;
    return this;
}

FormulaExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormulaExprContext.prototype.constructor = FormulaExprContext;

FormulaExprContext.prototype.expressionStatement = function() {
    return this.getTypedRuleContext(ExpressionStatementContext,0);
};

FormulaExprContext.prototype.EOF = function() {
    return this.getToken(ReportFormulaParser.EOF, 0);
};

FormulaExprContext.prototype.Assign = function() {
    return this.getToken(ReportFormulaParser.Assign, 0);
};

FormulaExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterFormulaExpr(this);
	}
};

FormulaExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitFormulaExpr(this);
	}
};

FormulaExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitFormulaExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ReportFormulaParser.FormulaExprContext = FormulaExprContext;

ReportFormulaParser.prototype.formulaExpr = function() {

    var localctx = new FormulaExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ReportFormulaParser.RULE_formulaExpr);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 43;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===ReportFormulaParser.Assign) {
            this.state = 42;
            this.match(ReportFormulaParser.Assign);
        }

        this.state = 45;
        this.expressionStatement();
        this.state = 46;
        this.match(ReportFormulaParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReportFormulaParser.RULE_expressionStatement;
    return this;
}

ExpressionStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionStatementContext.prototype.constructor = ExpressionStatementContext;

ExpressionStatementContext.prototype.expressionSequence = function() {
    return this.getTypedRuleContext(ExpressionSequenceContext,0);
};

ExpressionStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterExpressionStatement(this);
	}
};

ExpressionStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitExpressionStatement(this);
	}
};

ExpressionStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitExpressionStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ReportFormulaParser.ExpressionStatementContext = ExpressionStatementContext;

ReportFormulaParser.prototype.expressionStatement = function() {

    var localctx = new ExpressionStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ReportFormulaParser.RULE_expressionStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 48;
        this.expressionSequence();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpressionSequenceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReportFormulaParser.RULE_expressionSequence;
    return this;
}

ExpressionSequenceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionSequenceContext.prototype.constructor = ExpressionSequenceContext;

ExpressionSequenceContext.prototype.singleExpression = function() {
    return this.getTypedRuleContext(SingleExpressionContext,0);
};

ExpressionSequenceContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterExpressionSequence(this);
	}
};

ExpressionSequenceContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitExpressionSequence(this);
	}
};

ExpressionSequenceContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitExpressionSequence(this);
    } else {
        return visitor.visitChildren(this);
    }
};




ReportFormulaParser.ExpressionSequenceContext = ExpressionSequenceContext;

ReportFormulaParser.prototype.expressionSequence = function() {

    var localctx = new ExpressionSequenceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ReportFormulaParser.RULE_expressionSequence);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 50;
        this.singleExpression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SingleExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ReportFormulaParser.RULE_singleExpression;
    return this;
}

SingleExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SingleExpressionContext.prototype.constructor = SingleExpressionContext;


 
SingleExpressionContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function ParenthesizedExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ParenthesizedExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
ParenthesizedExpressionContext.prototype.constructor = ParenthesizedExpressionContext;

ReportFormulaParser.ParenthesizedExpressionContext = ParenthesizedExpressionContext;

ParenthesizedExpressionContext.prototype.OpenParen = function() {
    return this.getToken(ReportFormulaParser.OpenParen, 0);
};

ParenthesizedExpressionContext.prototype.expressionSequence = function() {
    return this.getTypedRuleContext(ExpressionSequenceContext,0);
};

ParenthesizedExpressionContext.prototype.CloseParen = function() {
    return this.getToken(ReportFormulaParser.CloseParen, 0);
};
ParenthesizedExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterParenthesizedExpression(this);
	}
};

ParenthesizedExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitParenthesizedExpression(this);
	}
};

ParenthesizedExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitParenthesizedExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function AdditiveExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    this.op = null; // Token;
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AdditiveExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
AdditiveExpressionContext.prototype.constructor = AdditiveExpressionContext;

ReportFormulaParser.AdditiveExpressionContext = AdditiveExpressionContext;

AdditiveExpressionContext.prototype.singleExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SingleExpressionContext);
    } else {
        return this.getTypedRuleContext(SingleExpressionContext,i);
    }
};

AdditiveExpressionContext.prototype.Plus = function() {
    return this.getToken(ReportFormulaParser.Plus, 0);
};

AdditiveExpressionContext.prototype.Minus = function() {
    return this.getToken(ReportFormulaParser.Minus, 0);
};
AdditiveExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterAdditiveExpression(this);
	}
};

AdditiveExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitAdditiveExpression(this);
	}
};

AdditiveExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitAdditiveExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function RelationalExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    this.op = null; // Token;
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

RelationalExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
RelationalExpressionContext.prototype.constructor = RelationalExpressionContext;

ReportFormulaParser.RelationalExpressionContext = RelationalExpressionContext;

RelationalExpressionContext.prototype.singleExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SingleExpressionContext);
    } else {
        return this.getTypedRuleContext(SingleExpressionContext,i);
    }
};

RelationalExpressionContext.prototype.LessThan = function() {
    return this.getToken(ReportFormulaParser.LessThan, 0);
};

RelationalExpressionContext.prototype.MoreThan = function() {
    return this.getToken(ReportFormulaParser.MoreThan, 0);
};

RelationalExpressionContext.prototype.LessThanEquals = function() {
    return this.getToken(ReportFormulaParser.LessThanEquals, 0);
};

RelationalExpressionContext.prototype.GreaterThanEquals = function() {
    return this.getToken(ReportFormulaParser.GreaterThanEquals, 0);
};
RelationalExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterRelationalExpression(this);
	}
};

RelationalExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitRelationalExpression(this);
	}
};

RelationalExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitRelationalExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function TernaryExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

TernaryExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
TernaryExpressionContext.prototype.constructor = TernaryExpressionContext;

ReportFormulaParser.TernaryExpressionContext = TernaryExpressionContext;

TernaryExpressionContext.prototype.singleExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SingleExpressionContext);
    } else {
        return this.getTypedRuleContext(SingleExpressionContext,i);
    }
};

TernaryExpressionContext.prototype.QuestionMark = function() {
    return this.getToken(ReportFormulaParser.QuestionMark, 0);
};

TernaryExpressionContext.prototype.Colon = function() {
    return this.getToken(ReportFormulaParser.Colon, 0);
};
TernaryExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterTernaryExpression(this);
	}
};

TernaryExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitTernaryExpression(this);
	}
};

TernaryExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitTernaryExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function LogicalAndExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LogicalAndExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
LogicalAndExpressionContext.prototype.constructor = LogicalAndExpressionContext;

ReportFormulaParser.LogicalAndExpressionContext = LogicalAndExpressionContext;

LogicalAndExpressionContext.prototype.singleExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SingleExpressionContext);
    } else {
        return this.getTypedRuleContext(SingleExpressionContext,i);
    }
};

LogicalAndExpressionContext.prototype.And = function() {
    return this.getToken(ReportFormulaParser.And, 0);
};
LogicalAndExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterLogicalAndExpression(this);
	}
};

LogicalAndExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitLogicalAndExpression(this);
	}
};

LogicalAndExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitLogicalAndExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PowerExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    this.op = null; // Token;
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PowerExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
PowerExpressionContext.prototype.constructor = PowerExpressionContext;

ReportFormulaParser.PowerExpressionContext = PowerExpressionContext;

PowerExpressionContext.prototype.singleExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SingleExpressionContext);
    } else {
        return this.getTypedRuleContext(SingleExpressionContext,i);
    }
};

PowerExpressionContext.prototype.Power = function() {
    return this.getToken(ReportFormulaParser.Power, 0);
};
PowerExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterPowerExpression(this);
	}
};

PowerExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitPowerExpression(this);
	}
};

PowerExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitPowerExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ObjectLiteralExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ObjectLiteralExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
ObjectLiteralExpressionContext.prototype.constructor = ObjectLiteralExpressionContext;

ReportFormulaParser.ObjectLiteralExpressionContext = ObjectLiteralExpressionContext;

ObjectLiteralExpressionContext.prototype.objectLiteral = function() {
    return this.getTypedRuleContext(ObjectLiteralContext,0);
};
ObjectLiteralExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterObjectLiteralExpression(this);
	}
};

ObjectLiteralExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitObjectLiteralExpression(this);
	}
};

ObjectLiteralExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitObjectLiteralExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function LiteralExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LiteralExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
LiteralExpressionContext.prototype.constructor = LiteralExpressionContext;

ReportFormulaParser.LiteralExpressionContext = LiteralExpressionContext;

LiteralExpressionContext.prototype.literal = function() {
    return this.getTypedRuleContext(LiteralContext,0);
};
LiteralExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterLiteralExpression(this);
	}
};

LiteralExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitLiteralExpression(this);
	}
};

LiteralExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitLiteralExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function LogicalOrExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

LogicalOrExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
LogicalOrExpressionContext.prototype.constructor = LogicalOrExpressionContext;

ReportFormulaParser.LogicalOrExpressionContext = LogicalOrExpressionContext;

LogicalOrExpressionContext.prototype.singleExpression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SingleExpressionContext);
    } else {
        return this.getTypedRuleContext(SingleExpressionContext,i);
    }
};

LogicalOrExpressionContext.prototype.Or = function() {
    return this.getToken(ReportFormulaParser.Or, 0);
};
LogicalOrExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterLogicalOrExpression(this);
	}
};

LogicalOrExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitLogicalOrExpression(this);
	}
};

LogicalOrExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitLogicalOrExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ArrayLiteralExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ArrayLiteralExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
ArrayLiteralExpressionContext.prototype.constructor = ArrayLiteralExpressionContext;

ReportFormulaParser.ArrayLiteralExpressionContext = ArrayLiteralExpressionContext;

ArrayLiteralExpressionContext.prototype.arrayLiteral = function() {
    return this.getTypedRuleContext(ArrayLiteralContext,0);
};
ArrayLiteralExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterArrayLiteralExpression(this);
	}
};

ArrayLiteralExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitArrayLiteralExpression(this);
	}
};

ArrayLiteralExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitArrayLiteralExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function MemberDotExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

MemberDotExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
MemberDotExpressionContext.prototype.constructor = MemberDotExpressionContext;

ReportFormulaParser.MemberDotExpressionContext = MemberDotExpressionContext;

MemberDotExpressionContext.prototype.singleExpression = function() {
    return this.getTypedRuleContext(SingleExpressionContext,0);
};

MemberDotExpressionContext.prototype.Dot = function() {
    return this.getToken(ReportFormulaParser.Dot, 0);
};

MemberDotExpressionContext.prototype.identifierName = function() {
    return this.getTypedRuleContext(IdentifierNameContext,0);
};

MemberDotExpressionContext.prototype.QuestionMark = function() {
    return this.getToken(ReportFormulaParser.QuestionMark, 0);
};

MemberDotExpressionContext.prototype.Hashtag = function() {
    return this.getToken(ReportFormulaParser.Hashtag, 0);
};
MemberDotExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterMemberDotExpression(this);
	}
};

MemberDotExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.exitMemberDotExpression(this);
	}
};

MemberDotExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof ReportFormulaParserVisitor ) {
        return visitor.visitMemberDotExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function MemberIndexExpressionContext(parser, ctx) {
	SingleExpressionContext.call(this, parser);
    SingleExpressionContext.prototype.copyFrom.call(this, ctx);
    return this;
}

MemberIndexExpressionContext.prototype = Object.create(SingleExpressionContext.prototype);
MemberIndexExpressionContext.prototype.constructor = MemberIndexExpressionContext;

ReportFormulaParser.MemberIndexExpressionContext = MemberIndexExpressionContext;

MemberIndexExpressionContext.prototype.singleExpression = function() {
    return this.getTypedRuleContext(SingleExpressionContext,0);
};

MemberIndexExpressionContext.prototype.OpenBracket = function() {
    return this.getToken(ReportFormulaParser.OpenBracket, 0);
};

MemberIndexExpressionContext.prototype.expressionSequence = function() {
    return this.getTypedRuleContext(ExpressionSequenceContext,0);
};

MemberIndexExpressionContext.prototype.CloseBracket = function() {
    return this.getToken(ReportFormulaParser.CloseBracket, 0);
};
MemberIndexExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof ReportFormulaParserListener ) {
        listener.enterMemberIndexExpression(this);
	}
};
